# 3d-falling-sand-prototype

./: Cargo.toml  MIGRATION.md  README.md
.cargo/: config.toml
assets/materials/: bush.txt  grass.txt
assets/tools/: README.md
src/: app.rs  chunk_store.rs  compute_meshing.wgsl  edits.rs  floating_origin.rs  gpu_compute.rs  input.rs  lib.rs  main.rs  meshing.rs  player.rs  procgen.rs  renderer.rs  shader.wgsl  sim.rs  sim_world.rs  streaming.rs  streaming_manager.rs  types.rs  ui.rs  world.rs  world_bounds.rs  world_manager.rs  world_stream.rs
