[package]
name = "falling_sand_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1.3"
bytemuck = { version = "1", features = ["derive"] }
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
env_logger = "0.11"
glam = "0.27"
lz4_flex = "0.11"
log = "0.4"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
wgpu = "0.19"
winit = "0.29"

[profile.dev]
opt-level = 1
